--- a/src/static/output.css
+++ b/src/static/output.css
@@ -593,9 +593,8 @@ video {
   width: 24%;
   flex-direction: column;
   border-radius: 0.5rem;
-  border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(89 65 169 / var(--tw-border-opacity, 1));
+  background-color: rgb(216 180 254 / var(--tw-bg-opacity, 1));
+  --tw-bg-opacity: 0.3;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   padding-top: 0.5rem;
@@ -641,7 +640,7 @@ video {
   color: rgb(76 133 119 / var(--tw-text-opacity, 1));
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 100ms;
+  transition-duration: 75ms;
 }
 
 .widget-notes:hover {
@@ -661,7 +660,7 @@ video {
 
 .card:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(177 191 114 / var(--tw-border-opacity, 1));
+  border-color: rgb(252 165 165 / var(--tw-border-opacity, 1));
 }
 
 .card-title {
@@ -675,7 +674,7 @@ video {
 
 .group:hover .card-title {
   --tw-text-opacity: 1;
-  color: rgb(177 191 114 / var(--tw-text-opacity, 1));
+  color: rgb(252 165 165 / var(--tw-text-opacity, 1));
 }
 
 .card-subtext {
@@ -688,7 +687,7 @@ video {
 
 .group:hover .card-subtext {
   --tw-text-opacity: 1;
-  color: rgb(177 191 114 / var(--tw-text-opacity, 1));
+  color: rgb(252 165 165 / var(--tw-text-opacity, 1));
 }
 
 .poem-container {
@@ -734,11 +733,66 @@ video {
 
 .poem-container > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .poem-container {
+  text-align: left;
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.preview-poem-container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .preview-poem-container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .preview-poem-container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .preview-poem-container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .preview-poem-container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .preview-poem-container {
+    max-width: 1536px;
+  }
+}
+
+.preview-poem-container {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.preview-poem-container > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
+.preview-poem-container {
+  border-bottom-width: 1px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: left;
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
@@ -754,12 +808,36 @@ video {
   margin-top: 0px;
 }
 
+.poetry-preview {
+  text-align: left;
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.preview-title {
+  margin-top: 0.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 100ms;
+}
+
+.preview-title:hover {
+  text-decoration-line: underline;
+}
+
 .static {
   position: static;
 }
 
 .sticky {
   position: sticky;
+}
+
+.mx-32 {
+  margin-left: 8rem;
+  margin-right: 8rem;
 }
 
 .mx-auto {
@@ -796,10 +874,6 @@ video {
   margin-left: 3.5rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -814,6 +888,10 @@ video {
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-6 {
@@ -894,8 +972,17 @@ video {
   max-width: 56rem;
 }
 
+.max-w-5xl {
+  max-width: 64rem;
+}
+
 .max-w-6xl {
   max-width: 72rem;
+}
+
+.max-w-fit {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 .shrink {
@@ -1001,8 +1088,18 @@ video {
   overflow: clip;
 }
 
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-sm {
@@ -1040,11 +1137,6 @@ video {
   border-color: rgb(99 102 241 / var(--tw-border-opacity, 1));
 }
 
-.border-midblue {
-  --tw-border-opacity: 1;
-  border-color: rgb(45 91 175 / var(--tw-border-opacity, 1));
-}
-
 .border-puce {
   --tw-border-opacity: 1;
   border-color: rgb(180 130 145 / var(--tw-border-opacity, 1));
@@ -1053,6 +1145,11 @@ video {
 .border-viridian {
   --tw-border-opacity: 1;
   border-color: rgb(76 133 119 / var(--tw-border-opacity, 1));
+}
+
+.bg-\[\#7fa8f4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 168 244 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#dcabba\] {
@@ -1100,12 +1197,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-lighterblue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 146 233 / var(--tw-bg-opacity, 1));
+}
+
 .bg-opacity-20 {
   --tw-bg-opacity: 0.2;
 }
 
-.bg-opacity-25 {
-  --tw-bg-opacity: 0.25;
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
+}
+
+.bg-opacity-35 {
+  --tw-bg-opacity: 0.35;
 }
 
 .bg-opacity-40 {
@@ -1132,6 +1238,15 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-6 {
@@ -1168,6 +1283,14 @@ video {
   padding-bottom: 0px;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1188,6 +1311,10 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1200,12 +1327,12 @@ video {
   padding-top: 1.25rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-left {
@@ -1280,6 +1407,11 @@ video {
   color: rgb(45 91 175 / var(--tw-text-opacity, 1));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
@@ -1325,6 +1457,11 @@ video {
   color: rgb(45 91 175 / var(--tw-text-opacity, 1));
 }
 
+.text-pink-400 {
+  --tw-text-opacity: 1;
+  color: rgb(244 114 182 / var(--tw-text-opacity, 1));
+}
+
 .text-puce {
   --tw-text-opacity: 1;
   color: rgb(180 130 145 / var(--tw-text-opacity, 1));
@@ -1350,9 +1487,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-red-500 {
+.text-yinminblue {
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+  color: rgb(44 73 127 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -1382,6 +1519,14 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1408,9 +1553,19 @@ video {
   border-color: rgb(99 146 233 / var(--tw-border-opacity, 1));
 }
 
+.hover\:bg-\[\#5089f4\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 137 244 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-puce:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(180 130 145 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-\[\#4780ea\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 128 234 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-opacity-30:hover {
@@ -1425,6 +1580,11 @@ video {
 .hover\:text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-lighterblue:hover {
+  --tw-text-opacity: 1;
+  color: rgb(99 146 233 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover {
