--- a/src/static/output.css
+++ b/src/static/output.css
@@ -996,12 +996,22 @@ video {
   color: rgb(220 220 220 / var(--tw-text-opacity, 1));
 }
 
-.static {
-  position: static;
+.toc-item {
+  cursor: pointer;
+  --tw-text-opacity: 1;
+  color: rgb(78 110 88 / var(--tw-text-opacity, 1));
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.relative {
-  position: relative;
+.toc-item:hover {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
+  text-decoration-line: underline;
+}
+
+.static {
+  position: static;
 }
 
 .m-auto {
@@ -1051,10 +1061,6 @@ video {
   margin-bottom: -80px;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -1099,10 +1105,6 @@ video {
   display: none;
 }
 
-.h-4\/5 {
-  height: 80%;
-}
-
 .h-\[100vh\] {
   height: 100vh;
 }
@@ -1125,6 +1127,10 @@ video {
 
 .max-h-\[230px\] {
   max-height: 230px;
+}
+
+.max-h-\[30vh\] {
+  max-height: 30vh;
 }
 
 .min-h-\[350px\] {
@@ -1150,10 +1156,6 @@ video {
 
 .w-1\/6 {
   width: 16.666667%;
-}
-
-.w-4\/5 {
-  width: 80%;
 }
 
 .w-\[70\%\] {
@@ -1288,10 +1290,6 @@ video {
   overflow: clip;
 }
 
-.overflow-x-scroll {
-  overflow-x: scroll;
-}
-
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1312,11 +1310,6 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
-}
-
-.rounded-t-\[0px\] {
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
 }
 
 .border {
@@ -1345,6 +1338,11 @@ video {
   border-color: rgb(180 83 9 / var(--tw-border-opacity, 1));
 }
 
+.border-hgreen {
+  --tw-border-opacity: 1;
+  border-color: rgb(78 110 88 / var(--tw-border-opacity, 1));
+}
+
 .border-puce {
   --tw-border-opacity: 1;
   border-color: rgb(180 130 145 / var(--tw-border-opacity, 1));
@@ -1353,11 +1351,6 @@ video {
 .border-viridian {
   --tw-border-opacity: 1;
   border-color: rgb(76 133 119 / var(--tw-border-opacity, 1));
-}
-
-.\!bg-black {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .\!bg-blue-300 {
@@ -1379,11 +1372,6 @@ video {
   background-color: rgb(171 200 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#d4d1d1\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 209 209 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#dcabba\] {
   --tw-bg-opacity: 1;
   background-color: rgb(220 171 186 / var(--tw-bg-opacity, 1));
@@ -1392,11 +1380,6 @@ video {
 .bg-base {
   --tw-bg-opacity: 1;
   background-color: rgb(241 241 241 / var(--tw-bg-opacity, 1));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-100 {
@@ -1488,11 +1471,6 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-\[14px\] {
-  padding-left: 14px;
-  padding-right: 14px;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1554,8 +1532,16 @@ video {
   padding-bottom: 2rem;
 }
 
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .pl-\[6px\] {
   padding-left: 6px;
+}
+
+.pr-20 {
+  padding-right: 5rem;
 }
 
 .pr-\[10px\] {
@@ -1568,6 +1554,10 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pt-5 {
@@ -1676,11 +1666,6 @@ video {
 .text-\[\#f1f1f1\] {
   --tw-text-opacity: 1;
   color: rgb(241 241 241 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#f8f8f2\] {
-  --tw-text-opacity: 1;
-  color: rgb(248 248 242 / var(--tw-text-opacity, 1));
 }
 
 .text-black {
