--- a/src/static/input.css
+++ b/src/static/input.css
@@ -4,7 +4,7 @@
 
 @layer components{
     .widget {
-        @apply  px-5 py-2 rounded-lg w-[24%] shadow-md bg-purple-300 bg-opacity-30 shadow-neonpurp hover:shadow-[#725295] hover:bg-opacity-40 transition-all duration-150  flex flex-col;
+        @apply  lg:max-xl:w-[30%] px-5 py-2 rounded-lg  w-full md:w-[48%] lg:w-[24%] shadow-md bg-purple-300 bg-opacity-30 shadow-neonpurp hover:shadow-[#725295] hover:bg-opacity-40 transition-all duration-150  flex flex-col;
       }
       .widget2 {
         @apply border-darkpurple border-[1px] shadow-md px-5 py-2 rounded-lg w-[24%] bg-purple-300 bg-opacity-50 hover:bg-opacity-40 transition-all duration-150  flex flex-col;
@@ -21,7 +21,7 @@
       }
     
       .widget-content {
-        @apply text-xs text-gray-700 min-h-12;
+        @apply text-xs text-gray-700 min-h-fit lg:min-h-12;
       }
       .widget-notes{
         @apply text-viridian font-bold text-sm hover:text-[#6bc9b2] transition-all duration-75 max-w-min border-viridian;
@@ -42,16 +42,17 @@
       .card{
         @apply flex flex-col w-full p-4 border-viridian border-[1px] hover:border-red-300;
       }
+      /*py-2 justify-normal items-stretch min-h-max flex flex-row flex-wrap gap-y-5 gap-x-4"*/
       .card-title{
         @apply mb-2 text-xl font-semibold text-viridian group-hover:text-red-300;
       }
       .card-subtext{
-        @apply text-base text-viridian group-hover:text-red-300;}
+        @apply text-base text-viridian group-hover:text-red-300 break-words;}
       .project-cards {
         @apply flex flex-row flex-wrap items-center justify-center gap-y-4 gap-x-4 
       }
       .poem-container{
-        @apply text-gray-700 container block text-left mx-auto space-y-1 mb-20;
+        @apply text-gray-700 container block text-left mx-auto space-y-1 mb-2 px-40 py-4;
       }
       .preview-poem-container{ 
         @apply  border-b  pt-4 pb-4 text-gray-700 container block text-left mx-auto space-y-0 ;}
@@ -104,7 +105,7 @@
         @apply m-0 text-[#dcdcdc];
       }
       .toc-item{
-        @apply text-hgreen hover:text-red-400 hover:underline ease-in-out duration-200 cursor-pointer;
+        @apply text-hgreen hover:text-red-400 hover:underline ease-in-out  cursor-pointer;
       }
 }
 @layer utilities{
