--- a/src/static/output.css
+++ b/src/static/output.css
@@ -1059,6 +1059,71 @@ video {
   text-decoration-line: underline;
 }
 
+.image-div {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.image-article {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .image-article {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .image-article {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .image-article {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .image-article {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1366px) {
+  .image-article {
+    max-width: 1366px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .image-article {
+    max-width: 1536px;
+  }
+}
+
+.image-article {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.image-article > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
+.image-article {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: left;
+}
+
 .static {
   position: static;
 }
@@ -1080,11 +1145,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-
-.mx-36 {
-  margin-left: 9rem;
-  margin-right: 9rem;
 }
 
 .\!mr-1 {
@@ -1183,12 +1243,12 @@ video {
   max-height: 230px;
 }
 
-.max-h-\[30vh\] {
-  max-height: 30vh;
-}
-
 .max-h-\[300px\] {
   max-height: 300px;
+}
+
+.max-h-\[30vh\] {
+  max-height: 30vh;
 }
 
 .min-h-\[350px\] {
@@ -1222,10 +1282,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-1\/4 {
-  width: 25%;
 }
 
 .max-w-4xl {
@@ -1336,6 +1392,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1346,12 +1408,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-y-0 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0px * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -1398,10 +1454,6 @@ video {
 
 .border-\[1px\] {
   border-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-none {
@@ -1676,10 +1728,6 @@ video {
   padding-top: 2rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1809,6 +1857,11 @@ video {
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
 .text-hgreen {
