--- a/src/static/output.css
+++ b/src/static/output.css
@@ -2245,6 +2245,11 @@ video {
   color: rgb(45 91 175 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-puce:hover {
+  --tw-text-opacity: 1;
+  color: rgb(180 130 145 / var(--tw-text-opacity, 1));
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
