--- a/src/static/style.css
+++ b/src/static/style.css
@@ -11,6 +11,19 @@ body{
     display:flex;
     flex-direction:column;
 }
+.top-section{
+    display: flex;
+    flex-direction: rows;
+  
+    
+}
+img{
+    max-width:22%;
+    border-color:#74226c;
+    border-width:3px;
+    border-style: solid;
+    object-fit: cover;
+}
 main{
     flex-grow: 1;
     display:flex;
@@ -22,10 +35,11 @@ main{
     margin-left:60px;
     margin-right:60px;
     margin-bottom:36px;
+    align-items: center;
 }
 
 .current{
-    color:blue;
+    color:#ae95c7;
 }
 ul{
     display:flex;
@@ -60,6 +74,7 @@ a{
     line-height:1.75rem;
     padding-left:2.5rem;
     padding-right:2.5rem;
+    
 }
 .subtitle{
     color:#816e94;
@@ -68,6 +83,7 @@ a{
     font-weight:bold;
     font-size:1.25rem;
     line-height:1.75rem;
+   
 }
 section{
     text-align:left;
@@ -160,19 +176,27 @@ h2{
     flex-direction:row;
     column-gap:10px;
     color:#3482bd;
-  
-    
-  
-    
-    
+    margin-bottom:15px;
 }
+div.experience.langlist>span{
+background-color: rgba(155, 243, 240, 0.4);
+border-color:#09a6a1;
+border-width:1px;
+border-style:solid;
+padding-left:4px;
+padding-right:4px;
+}
+
 .langlist{
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     text-shadow:0 1px #fff;
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
-    column-gap:40px;
+    justify-content:baseline;
+    row-gap:10px;
+    column-gap:35px;
+   
 }
 div.langlist>span{
     font-size:17px;
