--- a/src/static/output.css
+++ b/src/static/output.css
@@ -717,12 +717,16 @@ video {
 
 .card {
   display: flex;
-  width: 100%;
+  width: 32%;
   flex-direction: column;
+  text-wrap: wrap;
   border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(76 133 119 / var(--tw-border-opacity, 1));
-  padding: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 0px;
 }
 
 .card:hover {
@@ -1124,6 +1128,35 @@ video {
   text-align: left;
 }
 
+.techwidget {
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(74 222 128 / var(--tw-border-opacity, 1));
+  --tw-bg-opacity: 0.6 !important;
+  padding: 2px;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  --tw-text-opacity: 1 !important;
+  color: rgb(87 154 108 / var(--tw-text-opacity, 1)) !important;
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace!important;
+  text-shadow:0 1px #fff !important;
+}
+
+.group:hover .techwidget {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 165 165 / var(--tw-border-opacity, 1));
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity, 1)) !important;
+  --tw-bg-opacity: 0.1 !important;
+  --tw-text-opacity: 1 !important;
+  color: rgb(252 165 165 / var(--tw-text-opacity, 1)) !important;
+}
+
 .visible {
   visibility: visible;
 }
@@ -1144,6 +1177,11 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-auto {
@@ -1252,10 +1290,6 @@ video {
   height: 100vh;
 }
 
-.max-h-0\.5 {
-  max-height: 0.125rem;
-}
-
 .max-h-\[200px\] {
   max-height: 200px;
 }
@@ -1276,11 +1310,6 @@ video {
   max-height: 400px;
 }
 
-.max-h-min {
-  max-height: -moz-min-content;
-  max-height: min-content;
-}
-
 .min-h-\[350px\] {
   min-height: 350px;
 }
@@ -1296,11 +1325,6 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.min-h-min {
-  min-height: -moz-min-content;
-  min-height: min-content;
 }
 
 .w-1\/2 {
@@ -1321,14 +1345,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-3\/4 {
-  width: 75%;
 }
 
 .min-w-\[400px\] {
@@ -1358,10 +1374,6 @@ video {
 .max-w-fit {
   max-width: -moz-fit-content;
   max-width: fit-content;
-}
-
-.max-w-10 {
-  max-width: 2.5rem;
 }
 
 .flex-grow {
@@ -1673,10 +1685,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .\!px-0 {
@@ -2186,10 +2194,6 @@ video {
     margin-right: auto;
   }
 
-  .sm\:grid {
-    display: grid;
-  }
-
   .sm\:w-1\/5 {
     width: 20%;
   }
@@ -2219,13 +2223,6 @@ video {
 
   .sm\:text-center {
     text-align: center;
-  }
-
-  .sm\:grid-type{
-    grid-template-columns: repeat(auto-fill, minmax(470px, 1fr));
-    width:100%;
-    gap:32px;
-    /*display:flex;*/
   }
 }
 
